ci: build typescript for creating rc

--- a/.github/workflows/handle-create-rc-command.yml
+++ b/.github/workflows/handle-create-rc-command.yml
@@ -20,6 +20,8 @@ jobs:
         uses: ./.github/actions/setup-node
         with:
           npm_token: ${{ secrets.NPM_TOKEN }}
+      - name: Build typescript 📦
+        run: npm run build && find dist/index.js
       - name: Normalize npm tag
         id: npm
         run: |
