ci: fix wrong uses

--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -26,7 +26,8 @@ jobs:
         run: |
           utc=$(date -u +"%b %-d, %Y at %-I:%M%p (UTC)")
           echo "utc=$utc" >> "$GITHUB_OUTPUT"
-      - uses: benjlevesque/short-sha@v3.0 🔑
+      - name: Get short commit sha 🔑
+        uses: benjlevesque/short-sha@v3.0
         id: short-sha
       - uses: marocchino/sticky-pull-request-comment@v2
         env:
