ci: ignore yml lint

--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -12,6 +12,7 @@ rules:
       /.github/workflows/*.yml
       /.github/settings.yml
       /.github/actions/setup-node/action.yml
+      /.github/actions/create-release-candidate/action.yml
   truthy:
     ignore: |
       /.github/workflows/*.yaml
