--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -14,46 +14,21 @@ jobs:
     steps:
       - name: Checkout 🛬
         uses: actions/checkout@v4
-      - uses: benjlevesque/short-sha@v3.0
-        id: short-sha
-      - name: Log details
-        env:
-          BRANCH: ${{ github.event.pull_request.head.ref }}
-          SHA: ${{ github.event.pull_request.head.sha }}
-        run: |
-          echo "Commit Short SHA: ${{ steps.short-sha.outputs.sha }}"
-          echo "Commit SHA: ${{ env.SHA }}"
-          echo "Branch: ${{ env.BRANCH }}"
-      - name: Setup Node ⚙️
-        uses: ./.github/actions/setup-node
+      - name: Create release candidate 🐣
+        uses: ./.github/actions/create-release-candidate
+        id: release-candidate
         with:
-          npm_token: ${{ secrets.NPM_TOKEN }}
-      - name: Build typescript 📦
-        run: npm run build && find dist/index.js
-      - name: Normalize npm tag
-        id: npm
-        env:
-          BRANCH: ${{ github.event.pull_request.head.ref }}
-        run: |
-          npm_tag=$(echo ${{ env.BRANCH }} | sed 's/\//-/g')
-          echo "NPM Tag: $npm_tag"
-          echo "tag=$npm_tag" >> "$GITHUB_OUTPUT"
-      - name: Update library version
-        env:
-          SHA: ${{ github.event.pull_request.head.sha }}
-        run: npm version --allow-same-version --no-git-tag-version prerelease --preid=rc.${{ env.SHA }}
-      - name: get-npm-version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@v1.3.1
-      - uses: JS-DevTools/npm-publish@v3
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
-          tag: ${{ steps.npm.outputs.tag }}
-      - name: Get current date
+          branch: ${{ github.event.pull_request.head.ref }}
+          commit-sha: ${{ github.event.pull_request.head.sha }}
+          npm-token: ${{ secrets.NPM_TOKEN }}
+      - name: Get current date 🕒
         id: date
         run: |
           utc=$(date -u +"%b %-d, %Y at %-I:%M%p (UTC)")
           echo "utc=$utc" >> "$GITHUB_OUTPUT"
+      - name: Get short commit sha 🔑
+        uses: benjlevesque/short-sha@v3.0
+        id: short-sha
       - uses: marocchino/sticky-pull-request-comment@v2
         env:
           BRANCH: ${{ github.event.pull_request.head.ref }}
@@ -64,9 +39,9 @@ jobs:
             ## ☁️ Release Candidate Preview
             📘 Name | 🔑 Latest Commit | 📦 NPM | 🕒 Updated
             --- | --- | ---| ---
-            [typescript-library-template-example](https://github.com/AlbertHernandez/typescript-library-template/tree/${{ env.BRANCH }}) | [${{ steps.short-sha.outputs.sha }}](https://github.com/AlbertHernandez/typescript-library-template/commit/${{ env.SHA }}) | [NPM](https://www.npmjs.com/package/typescript-library-template-example/v/${{ steps.npm.outputs.tag }}) | ${{ steps.date.outputs.utc }}
+            [typescript-library-template-example](https://github.com/AlbertHernandez/typescript-library-template/tree/${{ env.BRANCH }}) | [${{ steps.short-sha.outputs.sha }}](https://github.com/AlbertHernandez/typescript-library-template/commit/${{ env.SHA }}) | [NPM](https://www.npmjs.com/package/typescript-library-template-example/v/${{ steps.release-candidate.outputs.npm-tag }}) | ${{ steps.date.outputs.utc }}
             ### 💻 Client installation
             To install the release candidate, you can run:
             ```bash
-            npm install --save typescript-library-template-example@${{ steps.npm.outputs.tag }}
+            npm install --save typescript-library-template-example@${{ steps.release-candidate.outputs.npm-tag }}
             ```
