--- a/.github/actions/create-release-candidate/action.yml
+++ b/.github/actions/create-release-candidate/action.yml
@@ -49,3 +49,28 @@ runs:
       with:
         token: ${{ inputs.npm-token }}
         tag: ${{ steps.npm.outputs.tag }}
+    - name: Get current date 🕒
+      id: date
+      shell: bash
+      run: |
+        utc=$(date -u +"%b %-d, %Y at %-I:%M%p (UTC)")
+        echo "utc=$utc" >> "$GITHUB_OUTPUT"
+    - name: Get short commit sha 🔑
+      shell: bash
+      run: |
+        short_sha=$(echo "${{ inputs.commit-sha }}" | cut -c 1-7)
+        echo "sha=$short_sha" >> "$GITHUB_OUTPUT"
+      id: short-sha
+    - uses: marocchino/sticky-pull-request-comment@v2
+      with:
+        header: <release-candidate>
+        message: |
+          ## ☁️ Release Candidate Preview
+          📘 Name | 🔑 Latest Commit | 📦 NPM | 🕒 Updated
+          --- | --- | ---| ---
+          [typescript-library-template-example](https://github.com/AlbertHernandez/typescript-library-template/tree/${{ inputs.branch }}) | [${{ steps.short-sha.outputs.sha }}](https://github.com/AlbertHernandez/typescript-library-template/commit/${{ inputs.commit-sha }}) | [NPM](https://www.npmjs.com/package/typescript-library-template-example/v/${{ steps.npm.outputs.tag }}) | ${{ steps.date.outputs.utc }}
+          ### 💻 Client installation
+          To install the release candidate, you can run:
+          ```bash
+          npm install --save typescript-library-template-example@${{ steps.npm.outputs.tag }}
+          ```
