--- a/.github/workflows/handle-create-rc-command.yml
+++ b/.github/workflows/handle-create-rc-command.yml
@@ -1,5 +1,5 @@
 ---
-name: Handle Create RC command
+name: 'Handle Create RC command'
 
 on:
   repository_dispatch:
@@ -13,45 +13,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.client_payload.pull_request.head.ref }}
-      - name: Log details
-        run: |
-          echo "Commit SHA: ${{ github.event.client_payload.pull_request.head.sha }}"
-      - name: Setup Node ⚙️
-        uses: ./.github/actions/setup-node
+      - name: Create release candidate 🐣
+        uses: ./.github/actions/create-release-candidate
+        id: release-candidate
         with:
-          npm_token: ${{ secrets.NPM_TOKEN }}
-      - name: Build typescript 📦
-        run: npm run build && find dist/index.js
-      - name: Normalize npm tag
-        id: npm
-        run: |
-          npm_tag=$(echo ${{ github.event.client_payload.pull_request.head.ref }} | sed 's/\//-/g')
-          echo "NPM Tag: $npm_tag"
-          echo "tag=$npm_tag" >> "$GITHUB_OUTPUT"
-      - name: Update library version
-        run: npm version --allow-same-version --no-git-tag-version prerelease --preid=rc.${{ github.event.client_payload.pull_request.head.sha }}
-      - name: get-npm-version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@v1.3.1
-      - uses: JS-DevTools/npm-publish@v3
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
-          tag: ${{ steps.npm.outputs.tag }}
+          branch: ${{ github.event.client_payload.pull_request.head.ref }}
+          commit-sha: ${{ github.event.client_payload.pull_request.head.sha }}
+          npm-token: ${{ secrets.NPM_TOKEN }}
       - name: Mark command as done ✅
         uses: peter-evans/create-or-update-comment@v4
         with:
           repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
           comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
-          body: |
-            ## 🐣 The new release candidate is ready to be used
-
-            > [!TIP]
-            > Clients can use it running:
-            > ```bash
-            > npm install --save typescript-library-template-example@${{ steps.npm.outputs.tag }}
-            > ```
-            > OR
-            > ```bash
-            > npm install --save ${{ steps.package-version.outputs.current-version }}
-            > ```
           reactions: hooray
