--- a/.github/workflows/handle-create-rc-command.yml
+++ b/.github/workflows/handle-create-rc-command.yml
@@ -20,7 +20,7 @@ jobs:
           branch: ${{ github.event.client_payload.pull_request.head.ref }}
           commit-sha: ${{ github.event.client_payload.pull_request.head.sha }}
           npm-token: ${{ secrets.NPM_TOKEN }}
-          pr-number: ${{ github.event.client_payload.number }}
+          pr-number: ${{ github.event.client_payload.pull_request.number }}
       - name: Mark command as done ✅
         uses: peter-evans/create-or-update-comment@v4
         with:
