--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prepublishOnly": "npm i && npm run build",
     "build": "npm run validate-typescript && npm run build:clean && npm run generate-dist",
     "test": "rimraf coverage && npm run test:unit",
-    "test:unit": "jest tests/unit --coverageDirectory coverage/unit",
+    "test:unit": "vitest run --coverage",
     "lint": "eslint --ignore-path .gitignore . --ext .js,.ts",
     "lint:fix": "npm run lint -- --fix",
     "validate-typescript": "tsc -p tsconfig.prod.json --noEmit",
@@ -47,6 +47,7 @@
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
+    "@vitest/coverage-istanbul": "^1.3.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest": "^27.9.0",
@@ -54,6 +55,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-unicorn": "^51.0.1",
+    "eslint-plugin-vitest": "^0.3.22",
     "fs-extra": "^11.2.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
@@ -63,7 +65,10 @@
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "unplugin-swc": "^1.4.4",
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1"
   },
   "files": [
     "dist"
