--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -18,19 +18,18 @@ jobs:
         id: release
         with:
           token: ${{ secrets.PAT_GITHUB_TOKEN }}
-          include-component-in-tag: true
-      - name: Checkout 🛬
-        if: ${{ steps.release.outputs.releases_created }}
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.PAT_GITHUB_TOKEN }}
-      - name: Setup Node ⚙️
-        uses: ./.github/actions/setup-node
-        with:
-          npm_token: ${{ secrets.NPM_TOKEN }}
-      - name: Build Packages 🏗️
-        if: ${{ steps.release.outputs.releases_created }}
-        run: npm ci
+#      - name: Checkout 🛬
+#        if: ${{ steps.release.outputs.releases_created }}
+#        uses: actions/checkout@v4
+#        with:
+#          token: ${{ secrets.PAT_GITHUB_TOKEN }}
+#      - name: Setup Node ⚙️
+#        uses: ./.github/actions/setup-node
+#        with:
+#          npm_token: ${{ secrets.NPM_TOKEN }}
+#      - name: Build Packages 🏗️
+#        if: ${{ steps.release.outputs.releases_created }}
+#        run: npm ci
 #      - name: Publish to NPM 🚀
 #        if: ${{ steps.release.outputs.releases_created }}
 #        run: npm publish
