--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,7 +3,9 @@
   "packages": {
     ".": {
       "include-component-in-tag": false,
-      "release-type": "node"
+      "release-type": "node",
+      "draft": false,
+      "prerelease": false
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
