--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,18 +16,16 @@ jobs:
     steps:
       - uses: googleapis/release-please-action@v4
         id: release
-#      - name: Checkout 🛬
-#        if: ${{ steps.release.outputs.releases_created }}
-#        uses: actions/checkout@v4
-#        with:
-#          token: ${{ secrets.PAT_GITHUB_TOKEN }}
-#      - name: Setup Node ⚙️
-#        uses: ./.github/actions/setup-node
-#        with:
-#          npm_token: ${{ secrets.NPM_TOKEN }}
-#      - name: Build Packages 🏗️
-#        if: ${{ steps.release.outputs.releases_created }}
-#        run: npm ci
+      - name: Checkout 🛬
+        if: ${{ steps.release.outputs.releases_created }}
+        uses: actions/checkout@v4
+      - name: Setup Node ⚙️
+        uses: ./.github/actions/setup-node
+        with:
+          npm_token: ${{ secrets.NPM_TOKEN }}
+      - name: Build Packages 🏗️
+        if: ${{ steps.release.outputs.releases_created }}
+        run: npm ci
 #      - name: Publish to NPM 🚀
 #        if: ${{ steps.release.outputs.releases_created }}
 #        run: npm publish
