--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,9 +16,14 @@ jobs:
     steps:
       - uses: googleapis/release-please-action@v4
         id: release
+        with:
+          token: ${{ secrets.PAT_GITHUB_TOKEN }}
+          include-component-in-tag: false
       - name: Checkout 🛬
         if: ${{ steps.release.outputs.releases_created }}
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.PAT_GITHUB_TOKEN }}
       - name: Setup Node ⚙️
         uses: ./.github/actions/setup-node
         with:
