--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,7 +2,9 @@
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "bootstrap-sha": "b6b9602f90f039f6da582ce32e36239cd69917cf",
   "packages": {
-    ".": {}
+    ".": {
+      "include-component-in-tag": false
+    }
   },
   "changelog-sections": [
     {
