--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: googleapis/release-please-action@v4
         id: release
       - name: Checkout 🛬
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.release_created }}
         uses: actions/checkout@v4
       - name: Tag major and minor versions 🏷️
         if: ${{ steps.release.outputs.release_created }}
@@ -38,8 +38,8 @@ jobs:
         with:
           npm_token: ${{ secrets.NPM_TOKEN }}
       - name: Build Packages 🏗️
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.release_created }}
         run: npm ci
       - name: Publish to NPM 🚀
-        if: ${{ steps.release.outputs.releases_created }}
+        if: ${{ steps.release.outputs.release_created }}
         run: npm publish
