--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "validate-typescript": "tsc -p tsconfig.prod.json --noEmit",
     "generate-dist": "tsc --build tsconfig.prod.json",
     "build:clean": "rimraf dist; exit 0",
-    "prepare": "husky"
+    "prepare": "husky",
+    "typos": "if command -v typos >/dev/null 2>&1; then typos; else echo \"Typos cli tool is not installed, aborting checking typos. If you want to install it you can run 'brew install typos-cli'\"; fi"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
