chore: disable console.log warn in playground

--- a/.eslintrc
+++ b/.eslintrc
@@ -54,6 +54,12 @@
       }
     },
     {
+      "files": ["playground/**"],
+      "rules": {
+        "no-console": "off"
+      }
+    },
+    {
       "files": ["tests/**"],
       "plugins": ["vitest"],
       "extends": ["plugin:vitest/recommended"],
