refactor: change path alias to use @/ instead of just @

--- a/.eslintrc
+++ b/.eslintrc
@@ -45,7 +45,7 @@
               ["^\\u0000"],
               ["^node:"],
               ["^@?\\w"],
-              ["^@src(/.*|$)"],
+              ["^@/src(/.*|$)"],
               ["^"],
               ["^\\."]
             ]
