--- a/.swcrc
+++ b/.swcrc
@@ -9,7 +9,7 @@
     },
     "baseUrl": "./",
     "paths": {
-      "@src/*": ["src/*"]
+      "@/src/*": ["src/*"]
     },
     "target": "es2022"
   },
