--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "resolveJsonModule": true,
     "declaration": true,
     "paths": {
-      "@src/*": ["src/*"]
+      "@/src/*": ["src/*"]
     },
     "types": ["vitest/globals"]
   },
