chore: add path alias for tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -45,6 +45,7 @@
               ["^\\u0000"],
               ["^node:"],
               ["^@?\\w"],
+              ["^@/tests(/.*|$)"],
               ["^@/src(/.*|$)"],
               ["^"],
               ["^\\."]
