--- a/.github/actions/create-release-candidate/action.yml
+++ b/.github/actions/create-release-candidate/action.yml
@@ -1,28 +1,27 @@
 ---
 name: 'Create release candidate'
 
+description: 'Create a release candidate for a new version of the library'
+
 inputs:
   branch:
     description: 'Current branch name'
     required: true
-    type: string
-  commit-sha:
-    description: 'SHA of lastest commit'
+  commit_sha:
+    description: 'SHA of latest commit'
     required: true
-    type: string
-  npm-token:
+  npm_token:
     description: 'NPM Token'
     required: true
-    type: string
-  pr-number:
+  pr_number:
     description: 'Pull request number'
     required: false
-    type: string
+
 outputs:
-  package-version:
+  package_version:
     description: "The new package version"
     value: ${{ steps.package-version.outputs.current-version }}
-  npm-tag:
+  npm_tag:
     description: "Tag associated to the npm release candidate"
     value: ${{ steps.npm.outputs.tag }}
 
@@ -32,7 +31,7 @@ runs:
     - name: Setup Node ⚙️
       uses: ./.github/actions/setup-node
       with:
-        npm_token: ${{ inputs.npm-token }}
+        npm_token: ${{ inputs.npm_token }}
     - name: Build typescript 📦
       shell: bash
       run: npm run build && find dist/index.js
@@ -45,13 +44,13 @@ runs:
         echo "tag=$npm_tag" >> "$GITHUB_OUTPUT"
     - name: Update library version
       shell: bash
-      run: npm version --allow-same-version --no-git-tag-version prerelease --preid=rc.${{ inputs.commit-sha }}
+      run: npm version --allow-same-version --no-git-tag-version prerelease --preid=rc.${{ inputs.commit_sha }}
     - name: get-npm-version
       id: package-version
       uses: martinbeentjes/npm-get-version-action@v1.3.1
     - uses: JS-DevTools/npm-publish@v3
       with:
-        token: ${{ inputs.npm-token }}
+        token: ${{ inputs.npm_token }}
         tag: ${{ steps.npm.outputs.tag }}
     - name: Get current date 🕒
       id: date
@@ -62,18 +61,18 @@ runs:
     - name: Get short commit sha 🔑
       shell: bash
       run: |
-        short_sha=$(echo "${{ inputs.commit-sha }}" | cut -c 1-7)
+        short_sha=$(echo "${{ inputs.commit_sha }}" | cut -c 1-7)
         echo "sha=$short_sha" >> "$GITHUB_OUTPUT"
       id: short-sha
     - uses: marocchino/sticky-pull-request-comment@v2
       with:
         header: <release-candidate>
-        number: ${{ inputs.pr-number }}
+        number: ${{ inputs.pr_number }}
         message: |
           ## ☁️ Release Candidate Preview
           📘 Name | 🔑 Latest Commit | 📦 NPM | 🕒 Updated
           --- | --- | ---| ---
-          [typescript-library-template-example](https://github.com/AlbertHernandez/typescript-library-template/tree/${{ inputs.branch }}) | [${{ steps.short-sha.outputs.sha }}](https://github.com/AlbertHernandez/typescript-library-template/commit/${{ inputs.commit-sha }}) | [NPM](https://www.npmjs.com/package/typescript-library-template-example/v/${{ steps.npm.outputs.tag }}) | ${{ steps.date.outputs.utc }}
+          [typescript-library-template-example](https://github.com/AlbertHernandez/typescript-library-template/tree/${{ inputs.branch }}) | [${{ steps.short-sha.outputs.sha }}](https://github.com/AlbertHernandez/typescript-library-template/commit/${{ inputs.commit_sha }}) | [NPM](https://www.npmjs.com/package/typescript-library-template-example/v/${{ steps.npm.outputs.tag }}) | ${{ steps.date.outputs.utc }}
           ### 💻 Client installation
           To install the release candidate, you can run:
           ```bash
