--- a/.github/workflows/handle-create-rc-command.yml
+++ b/.github/workflows/handle-create-rc-command.yml
@@ -18,9 +18,9 @@ jobs:
         id: release-candidate
         with:
           branch: ${{ github.event.client_payload.pull_request.head.ref }}
-          commit-sha: ${{ github.event.client_payload.pull_request.head.sha }}
-          npm-token: ${{ secrets.NPM_TOKEN }}
-          pr-number: ${{ github.event.client_payload.pull_request.number }}
+          commit_sha: ${{ github.event.client_payload.pull_request.head.sha }}
+          npm_token: ${{ secrets.NPM_TOKEN }}
+          pr_number: ${{ github.event.client_payload.pull_request.number }}
       - name: Mark command as done ✅
         uses: peter-evans/create-or-update-comment@v4
         with:
