--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -23,7 +23,7 @@ runs:
       id: cache-node-modules
       with:
         path: 'node_modules'
-        key: ${{ runner.os }}-node_modules-${{ hashFiles('package*.json') }}-${{ hashFiles('.github/actions/setup-node/action.yml') }}-node-${{ inputs.version }}
+        key: ${{ runner.os }}-node_modules-${{ hashFiles('package*.json') }}-${{ hashFiles('.github/actions/setup-node/action.yml') }}-node-${{ hashFiles('.nvmrc') }}-${{ inputs.version }}
     - name: Setup Node ⚙️
       uses: actions/setup-node@v4
       with:
