--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test:unit": "vitest run --coverage",
     "lint": "eslint --ignore-path .gitignore . --ext .js,.ts",
     "lint:fix": "npm run lint -- --fix",
+    "lint:yaml": "chmod +x scripts/lint_yaml.sh && ./scripts/lint_yaml.sh",
     "validate-typescript": "tsc -p tsconfig.prod.json --noEmit",
     "generate-dist": "tsup src/index.ts --minify --tsconfig tsconfig.prod.json --dts --format cjs,esm --out-dir dist",
     "build:clean": "rimraf dist; exit 0",
