--- a/.github/workflows/pr-size-labeler.yml
+++ b/.github/workflows/pr-size-labeler.yml
@@ -1,4 +1,3 @@
----
 name: 'PR Size Labeler'
 
 on:
@@ -27,7 +26,4 @@ jobs:
             This PR exceeds the recommended size of 1000 lines.
             Please make sure you are NOT addressing multiple issues with one PR.
             Note this PR might be rejected due to its size.
-          files_to_ignore: |
-            "package-lock.json"
-            "*.lock"
-            "docs/*"
+          files_to_ignore: 'package-lock.json *.lock docs/*'
