--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
+  "type": "module",
   "scripts": {
-    "dev": "tsnd -r tsconfig-paths/register --inspect=0.0.0.0:9229 --respawn playground",
+    "dev": "nodemon",
     "prepublishOnly": "npm i && npm run build",
     "build": "npm run validate-typescript && npm run build:clean && npm run generate-dist",
     "test": "rimraf coverage && npm run test:unit",
@@ -59,11 +60,12 @@
     "fs-extra": "^11.2.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
+    "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "rimraf": "^5.0.8",
-    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "tsup": "^8.1.0",
+    "tsx": "^4.16.2",
     "typescript": "^5.5.3",
     "unplugin-swc": "^1.5.1",
     "vite": "^5.3.3",
