--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "typescript-library-template-example",
   "version": "1.14.10",
   "description": "Template for new typescript libraries",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "lib/index.js",
   "types": "dist/index.d.ts",
-  "module": "dist/index.mjs",
   "author": "alberthernandezdev@gmail.com",
   "license": "MIT",
   "bugs": {
@@ -73,5 +73,17 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
+    }
+  }
 }
