--- a/package.json
+++ b/package.json
@@ -72,6 +72,9 @@
     "vite": "^5.4.10",
     "vitest": "^2.0.2"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.24.3"
+  },
   "files": [
     "dist"
   ],
