--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "template"
   ],
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=9.0.0"
   },
   "type": "module",
   "scripts": {
@@ -47,6 +47,7 @@
     "@swc/cli": "^0.5.0",
     "@swc/core": "^1.7.42",
     "@types/fs-extra": "^11.0.4",
+    "@types/node": "^22.8.7",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitest/coverage-istanbul": "^2.1.4",
@@ -70,6 +71,10 @@
     "unplugin-swc": "^1.5.1",
     "vite": "^5.4.10",
     "vitest": "^2.0.2"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.24.3",
+    "@swc/core-linux-x64-gnu": "^1.7.42"
   },
   "files": [
     "dist"
