--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
           npm_token: ${{ secrets.NPM_TOKEN }}
       - name: Build Packages 🏗️
         if: ${{ steps.release.outputs.release_created }}
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       - name: Publish to NPM 🚀
         if: ${{ steps.release.outputs.release_created }}
-        run: npm publish
+        run: pnpm publish
