--- a/.github/workflows/package-size.yml
+++ b/.github/workflows/package-size.yml
@@ -30,10 +30,10 @@ jobs:
         id: cache-node-modules
         with:
           path: 'node_modules'
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+          key: deps-node-modules-${{ hashFiles('**/pnpm-lock.yaml') }}
       - name: Install dependencies 📥
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       - name: 📦 Cache package size for commit ${{ steps.commit.outputs.short }}
         uses: actions/cache@v4
         with:
@@ -47,7 +47,7 @@ jobs:
             package_size=$(<base-package-size.txt)
           else
             echo "Package size not available in the cache"
-            package_size=$(npm publish --dry-run 2>&1 | grep "unpacked size" | awk '{print $5 $6}')
+            package_size=$(pnpm publish --dry-run --no-git-checks 2>&1 | grep "unpacked size" | awk '{print $5 $6}')
           fi
           echo "$package_size" > base-package-size.txt
           echo "package_size=$package_size" >> "$GITHUB_OUTPUT"
@@ -69,14 +69,14 @@ jobs:
         id: cache-node-modules
         with:
           path: 'node_modules'
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+          key: deps-node-modules-${{ hashFiles('**/pnpm-lock.yaml') }}
       - name: Install dependencies 📥
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm ci
+        run: pnpm install --frozen-lockfile
       - name: 🎁 Calculate package size in ${{ github.head_ref }}
         id: package-head
         run: |
-          package_size=$(npm publish --dry-run 2>&1 | grep "unpacked size" | awk '{print $5 $6}')
+          package_size=$(pnpm publish --dry-run --no-git-checks 2>&1 | grep "unpacked size" | awk '{print $5 $6}')
           echo "package_size=$package_size" >> "$GITHUB_OUTPUT"
           echo "Package size: $package_size"
   write-comment:
