--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-library-template-example",
-  "version": "2.0.2",
+  "version": "2.0.1",
   "description": "Template for new typescript libraries",
   "main": "dist/index.cjs",
   "module": "lib/index.js",
@@ -22,7 +22,8 @@
   ],
   "engines": {
     "node": ">=20.0.0",
-    "npm": ">=9.0.0"
+    "npm": ">=9.0.0",
+    "pnpm": ">=9.x"
   },
   "type": "module",
   "scripts": {
