--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon",
-    "prepublishOnly": "pnpm i && pnpm build",
-    "build": "pnpm validate-typescript && pnpm build:clean && pnpm generate-dist",
-    "test": "rimraf coverage && pnpm test:unit",
+    "prepublishOnly": "pnpm i && node --run build",
+    "build": "node --run validate-typescript && node --run build:clean && node --run generate-dist",
+    "test": "rimraf coverage && node --run test:unit",
+    "build:legacy": "pnpm validate-typescript && pnpm build:clean && pnpm generate-dist",
+    "test:legacy": "rimraf coverage && pnpm test:unit",
     "test:unit": "vitest run --coverage",
     "lint": "eslint --ignore-path .gitignore . --ext .js,.ts",
     "lint:fix": "eslint --ignore-path .gitignore . --ext .js,.ts --fix",
